vprofile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vprofile.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vprofile
                port:
                  number: 80
